# invenio-oauthclient

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.invenio.cfg  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  RELEASE-NOTES.rst  pyproject.toml  pytest.ini  requirements-devel.txt  run-i18n-tests.sh  run-tests.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: i18n-pull.yml  i18n-push.yml  pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  conf.py  configuration.rst  contrib.rst  examplesapp.rst  howtouse.rst  index.rst  make.bat  overview.rst  requirements.txt  upgrading.rst  usage.rst
examples/: app-setup.sh  app-teardown.sh  app.py  cern_app.py  cern_app_rest.py  github_app.py  github_app_rest.py  globus_app.py  globus_app_rest.py  orcid_app.py  orcid_app_rest.py
invenio_oauthclient/: __init__.py  _compat.py  admin.py  client.py  config.py  errors.py  ext.py  finalize_app.py  forms.py  handlers.py  models.py  oauth.py  proxies.py  signals.py  tasks.py  utils.py  version.py
invenio_oauthclient/alembic/: 1758275763_extra_data_jsonb.py  44ab9963e8cf_create_oauthclient_branch.py  7def990b852e_add_expires_at_and_refresh_token_to_.py  97bbc733896c_create_oauthclient_tables.py  __init__.py  aaa265b0afa6_move_useridentity_to_acconuts.py  bff1f190b9bd_add_timestamp_oauthclient.py  edf0c0907f40_change_datetime_types.py
invenio_oauthclient/contrib/: __init__.py  cern.py  cern_openid.py  eosc_aai.py  github.py  gitlab.py  globus.py  oidc.py  openaire_aai.py  orcid.py  settings.py
invenio_oauthclient/contrib/cilogon/: __init__.py  handlers.py  helpers.py  settings.py
invenio_oauthclient/contrib/keycloak/: __init__.py  handlers.py  helpers.py  settings.py
invenio_oauthclient/handlers/: __init__.py  authorized.py  base.py  decorators.py  refresh.py  rest.py  token.py  ui.py  utils.py
invenio_oauthclient/templates/invenio_oauthclient/: _macros.html  base.html  base_cover.html  login_user.html  postmessage.html  rejected.html  signup.html
invenio_oauthclient/templates/invenio_oauthclient/settings/: base.html  index.html
invenio_oauthclient/templates/semantic-ui/invenio_oauthclient/: _macros.html  base.html  base_cover.html  login_user.html  rejected.html  signup.html
invenio_oauthclient/translations/: invenio.pot  messages.pot
invenio_oauthclient/translations/af/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/ar/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/bg/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/ca/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/cs/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/da/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/de/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/de_AT/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/de_DE/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/el/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/en_AT/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/en_HU/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/es/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/es_CU/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/es_MX/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/et/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/et_EE/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/fa/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/fa_IR/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/fi/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/fr/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/fr_CI/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/fr_FR/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/gl/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/hi_IN/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/hr/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/hu/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/hu_HU/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/it/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/ja/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/ka/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/ko/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/lt/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/ne/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/no/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/pl/LC_MESSAGES/: messages.po
invenio_oauthclient/translations/pt/LC_MESSAGES/: messages.po
invenio_oauthclient/upgrades/: __init__.py  oauthclient_2014_03_02_initial.py  oauthclient_2014_04_14_json_type_fix.py  oauthclient_2014_08_25_extra_data_nullable.py  oauthclient_2014_10_21_encrypted_token_column.py
invenio_oauthclient/views/: __init__.py  client.py  rest.py  settings.py
tests/: __init__.py  conftest.py  helpers.py  test_admin.py  test_alembic.py  test_app.py  test_base_handlers.py  test_contrib_cern.py  test_contrib_cern_openid.py  test_contrib_cern_openid_rest.py  test_contrib_cern_rest.py  test_contrib_cilogon.py  test_contrib_eosc_aai.py  test_contrib_github.py  test_contrib_github_rest.py  test_contrib_gitlab.py  test_contrib_gitlab_rest.py  test_contrib_globus.py  test_contrib_keycloak.py  test_contrib_oidc.py  test_contrib_orcid.py  test_contrib_orcid_rest.py  test_contrib_settings.py  test_examples_app.py  test_forms.py  test_handlers.py  test_handlers_rest.py  test_handlers_ui.py  test_models.py  test_refresh.py  test_utils.py  test_views.py  test_views_rest.py
tests/data/: cern_openid_response_content.json  cilogon_jwks_info.json  cilogon_token_response.json  cilogon_userinfo_response.json  keycloak_realm_info.json  keycloak_token_response.json  keycloak_userinfo_response.json  oauth_response_content.json  orcid_bio.json
(+13 files in other folders)
