# SPDX-FileCopyrightText: 2015-2018 CERN.
# SPDX-FileCopyrightText: 2022-2026 Graz University of Technology.
# SPDX-FileCopyrightText: 2021-2026 TU Wien.
# SPDX-License-Identifier: MIT

[project]
name = "invenio-oauthclient"
description = "Invenio module that provides OAuth web authorization support."
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "CERN", email = "info@inveniosoftware.org" },
]
keywords = [
  "authentication",
  "invenio",
  "oauth",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
]
dependencies = [
  "blinker>=1.4",
  "flask-oauthlib-invenio>=2.0.0,<3.0.0",
  "github3.py>=1.0.0a4",
  "invenio-accounts>=9.0.0,<10.0.0",
  "invenio-base>=2.0.0,<3.0.0",
  "invenio-i18n>=4.0.0,<5.0.0",
  "invenio-mail>=1.0.2,<3.0.0",
  "invenio-theme>=5.0.0,<6.0.0",
  "markupsafe>=2.1.5",
  "oauthlib>=1.1.2",
  "requests-oauthlib>=0.6.2",
  "uritemplate>=3.0.1",
  "uritools>=1.0.1",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/inveniosoftware/invenio-oauthclient"

[project.entry-points."invenio_admin.views"]
invenio_oauth_remote_account = "invenio_oauthclient.admin:remote_account_adminview"
invenio_oauth_remote_token = "invenio_oauthclient.admin:remote_token_adminview"

[project.entry-points."invenio_base.api_apps"]
invenio_oauthclient = "invenio_oauthclient:InvenioOAuthClientREST"

[project.entry-points."invenio_base.api_blueprints"]
invenio_oauthclient_rest = "invenio_oauthclient.views.client:rest_blueprint"

[project.entry-points."invenio_base.apps"]
invenio_oauthclient = "invenio_oauthclient:InvenioOAuthClient"

[project.entry-points."invenio_base.blueprints"]
invenio_oauthclient = "invenio_oauthclient.views.client:blueprint"
invenio_oauthclient_settings = "invenio_oauthclient.views.settings:blueprint"

[project.entry-points."invenio_base.finalize_app"]
invenio_oauthclient = "invenio_oauthclient.ext:finalize_app"

[project.entry-points."invenio_base.secret_key"]
invenio_oauthclient = "invenio_oauthclient.utils:rebuild_access_tokens"

[project.entry-points."invenio_celery.tasks"]
invenio_oauthclient = "invenio_oauthclient.tasks"

[project.entry-points."invenio_db.alembic"]
invenio_oauthclient = "invenio_oauthclient:alembic"

[project.entry-points."invenio_db.models"]
invenio_oauthclient = "invenio_oauthclient.models"

[project.entry-points."invenio_i18n.translations"]
invenio_oauthclient = "invenio_oauthclient"

[project.optional-dependencies]
admin = [
  "invenio-accounts[admin]>=9.0.0,<10.0.0",
]
docs = []
github = []
mysql = []
orcid = []
postgresql = []
sqlite = []
tests = [
  "flask_admin>=1.6.0",
  "httpretty>=0.8.14",
  "invenio-db[mysql,postgresql,versioning]>=2.2.0,<3.0.0",
  "invenio-userprofiles>=7.0.0,<8.0.0",
  "mock>=1.3.0",
  "oauthlib>=1.1.2",
  "pytest-black>=0.6.0",
  "pytest-invenio>=4.0.0,<5.0.0",
  "requests-oauthlib>=0.6.2",
  "simplejson>=3.8",
  "sphinx>=4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# see https://babel.pocoo.org/en/latest/messages.html#toml-configuration-format
[tool.babel]
[tool.babel.compile_catalog]
directory = "invenio_oauthclient/translations/"
use_fuzzy = true

[tool.babel.extract_messages]
copyright_holder = "CERN"
msgid_bugs_address = "info@inveniosoftware.org"
mapping_file = "pyproject.toml"
output_file = "invenio_oauthclient/translations/messages.pot"
add_comments = "NOTE"

[tool.babel.init_catalog]
input_file = "invenio_oauthclient/translations/messages.pot"
output_dir = "invenio_oauthclient/translations/"

[[tool.babel.mappings]]
method = "javascript"
pattern = "**.js"
encoding = "utf-8"
extract_messages = "$._, jQuery._"

[[tool.babel.mappings]]
method = "python"
pattern = "**.py"
encoding = "utf-8"

[[tool.babel.mappings]]
method = "jinja2"
pattern = "**/templates/**.html"
encoding = "utf-8"

[tool.hatch.version]
path = "invenio_oauthclient/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/invenio_oauthclient",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401"

[tool.pytest.ini_options]
addopts = '--black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_oauthclient --cov-report=term-missing'
testpaths = "tests invenio_oauthclient"
live_server_scope = "module"
