# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2015-2018 CERN.
# Copyright (C) 2022-2024 Graz University of Technology.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-oauthclient
version = attr: invenio_oauthclient.__version__
description = "Invenio module that provides OAuth web authorization support."
long_description = file: README.rst, CHANGES.rst
keywords = invenio oauth authentication
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-oauthclient
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    blinker>=1.4
    Flask-OAuthlib-Invenio>=1.0.0
    invenio-accounts>=6.0.0,<7.0.0
    invenio-base>=2.0.0,<3.0.0
    invenio-i18n>=3.0.0,<4.0.0
    invenio-mail>=1.0.2,<3.0.0
    invenio-theme>=4.0.0,<5.0.0
    oauthlib>=1.1.2
    markupsafe>=2.1.5
    requests-oauthlib>=0.6.2
    uritools>=1.0.1
    github3.py>=1.0.0a4
    uritemplate>=3.0.1

[options.extras_require]
tests =
    flask_admin>=1.6.0
    pytest-black-ng>=0.4.0
    httpretty>=0.8.14
    invenio-userprofiles>=4.0.0,<5.0.0
    mock>=1.3.0
    oauthlib>=1.1.2
    pytest-invenio>=3.0.0,<4.0.0
    requests-oauthlib>=0.6.2
    simplejson>=3.8
    sphinx>=4.5
    invenio-db[mysql,postgresql,versioning]>=2.0.0,<3.0.0

# Kept for backwards compatibility
admin =
docs =
github =
mysql =
orcid =
postgresql =
sqlite =

[options.entry_points]
invenio_admin.views =
    invenio_oauth_remote_account = invenio_oauthclient.admin:remote_account_adminview
    invenio_oauth_remote_token = invenio_oauthclient.admin:remote_token_adminview
invenio_base.apps =
    invenio_oauthclient = invenio_oauthclient:InvenioOAuthClient
invenio_base.api_apps =
    invenio_oauthclient = invenio_oauthclient:InvenioOAuthClientREST
invenio_base.blueprints =
    invenio_oauthclient = invenio_oauthclient.views.client:blueprint
    invenio_oauthclient_settings = invenio_oauthclient.views.settings:blueprint
invenio_base.api_blueprints =
    invenio_oauthclient_rest = invenio_oauthclient.views.client:rest_blueprint
invenio_celery.tasks =
    invenio_oauthclient = invenio_oauthclient.tasks
invenio_db.alembic =
    invenio_oauthclient = invenio_oauthclient:alembic
invenio_db.models =
    invenio_oauthclient = invenio_oauthclient.models
invenio_base.secret_key =
    invenio_oauthclient = invenio_oauthclient.utils:rebuild_access_tokens
invenio_i18n.translations =
    invenio_oauthclient = invenio_oauthclient
invenio_base.finalize_app =
    invenio_oauthclient = invenio_oauthclient.ext:finalize_app

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[compile_catalog]
directory = invenio_oauthclient/translations/
use_fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping_file = babel.ini
output_file = invenio_oauthclient/translations/messages.pot

[init_catalog]
input_file = invenio_oauthclient/translations/messages.pot
output_dir = invenio_oauthclient/translations/

[update_catalog]
input_file = invenio_oauthclient/translations/messages.pot
output_dir = invenio_oauthclient/translations/

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_oauthclient --cov-report=term-missing
testpaths = docs tests invenio_oauthclient
